--- a/src/components/Books/Books.css
+++ b/src/components/Books/Books.css
@@ -5,7 +5,11 @@
 
 .display-books {
     background-color: #e6f3ff;
-    padding: 30px;
+    padding: 0 30px;
+}
+
+.display-books h3 {
+    margin-bottom: 20px;
 }
 
 .books-container {
@@ -86,4 +90,20 @@ h3 {
 
 .completed-btn:hover {
     background-color: goldenrod;
+}
+
+@media only screen and (max-width: 768px) {
+    .books-container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 15px;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    .books-container {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 10px;
+    }
 }
